-------------
Version 0.7.0
-------------
- Made Bot.php, AOChat.php and MySQL.php conform to the singleton design pattern
- Moved ConfigMagik out of main and into Source and converted it to use the singleton design pattern.
- Moved the configuration reading from Main.php and into Bot.php
- Added debugging function toggled by a bot variable.
- Changed most Commands to SuperAdmin instead of Owner as Superadmin should be almost as good as owner but isn't owner.
- Moved the server list into it's own file and changed the way game and server is detected. Dimension 0-3 are no longer valid and are replaced by Testlive, Atlantean, Rimor and Die neue welt. No backwards compatibility implemented
- Added level command to IRC (coded by nyt), Prefix no longer Required for /msg botname in IRC, /msg botname now Output error if unknown command.
- Created a commodities directory for class files that do not instantiate themselves
- Fixed countless php warnings and notices meaning it should now be possible to run the bot with php E_ALL logging turned on to help ease debugging.
- Bot now automatically uses curl() for fetching URL's if curl is detected. You can still force it to use Sockets using !settings tools force sockets on.
- Bot now includes bot name and dimension in user agent on HTTP requests.
- !roll should work properly now.
- Improved !raffle logic slightly. Will now determine the number of times to do a roll depending on the number of people in the raffle.
- Improved the cURL get_site function to support POST and Login.
- Added a Link for turning LFT on in click to join blob, can be disabled under settings.
- Autoinvites users who apear to have LD during a Raid.
- rally's can now be saved and loaded
- The bot will now automatically use cURL if it is available. The previous get_site setting has been removed
  and a new setting added to allow disabling cURL.
- The socket method used for get_site should now properly time out instead of waiting for the default